--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>    
-            <div class="flag border">
+            <div class="flag ">
                <div class="flaglogo"></div>
                <h3> EN</h3>
             </div>
@@ -44,7 +44,7 @@
                 <p><span>Returns</span></p>
                 <p class="nav-second">& orders</p>
             </div>
-            <div class="nav-cart border">
+            <div class="nav-cart">
                 <i class="fa-solid fa-cart-shopping"></i>
                 Cart
             </div>
@@ -70,6 +70,7 @@
 
     </header>
     <div class="hero-section">
+        <!-- <img src="./hero_image.jpeg" alt=""> -->
         <div  class="hero-msg">
             <p>You are on amazon.com. You ca n also shop on Amazon India forr millions of products with fast local delivery. <a href="https://www.amazon.in/?&tag=googhydrabk1-21&ref=pd_sl_7hz2t19t5c_e&adgrpid=155259815513&hvpone=&hvptwo=&hvadid=674842289437&hvpos=&hvnetw=g&hvrand=14216477871760668355&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9302258&hvtargid=kwd-10573980&hydadcr=14453_2316415&gad_source=1" >Click here to go to amazon.in</a> </p>
         </div>
