--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
     <link rel="shortcut icon" href="./android-chrome-192x192.png" type="image/x-icon">
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
@@ -70,69 +71,96 @@
 
     </header>
     <div class="hero-section">
-        <!-- <img src="./hero_image.jpeg" alt=""> -->
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="./hero_image.jpeg" alt=""></div>
+              <div class="swiper-slide"><img src="./hero2.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="./hero3.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="./hero4.jpg" alt=""></div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
         <div  class="hero-msg">
             <p>You are on amazon.com. You ca n also shop on Amazon India forr millions of products with fast local delivery. <a href="https://www.amazon.in/?&tag=googhydrabk1-21&ref=pd_sl_7hz2t19t5c_e&adgrpid=155259815513&hvpone=&hvptwo=&hvadid=674842289437&hvpos=&hvnetw=g&hvrand=14216477871760668355&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9302258&hvtargid=kwd-10573980&hydadcr=14453_2316415&gad_source=1" >Click here to go to amazon.in</a> </p>
         </div>
-
     </div>
     <div class="shop-section">
         <div class="box1 box">
             <div class="box-content">
                <h2>Clothes</h2>
-               <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+               <div class="overlay">
+                    <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+               </div> 
                <p>See more</p>
             </div>   
         </div>
         <div class="box2 box">
             <div class="box-content">
                 <h2>Health & personal care </h2>
-                <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
+                <div class="overlay">
+                    <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
+                </div>  
                 <p>See more</p>
              </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
+                <div class="overlay">
+                    <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
+                </div>
                 <p>See more</p>
              </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
                 <h2>Electronics</h2>
-                <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
+                <div class="overlay">
+                    <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
+                </div>
                 <p>See more</p>
              </div>
         </div>
         <div class="box5 box">
             <div class="box-content">
                <h2>Beauty picks</h2>
-               <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
+               <div class="overlay">
+                    <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
+               </div>
                <p>See more</p>
             </div>   
         </div>
         <div class="box6 box">
             <div class="box-content">
                 <h2>Pet care</h2>
-                <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
+                <div class="overlay">
+                    <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
+                </div>
                 <p>See more</p>
              </div>
         </div>
         <div class="box7 box">
             <div class="box-content">
                 <h2>New Arrival in Toys</h2>
-                <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
+                <div class="overlay">
+                    <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
+                </div>
                 <p>See more</p>
              </div>
         </div>
         <div class="box8 box">
             <div class="box-content">
                 <h2>Discover Fashion Trends</h2>
-                <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
+                <div class="overlay">
+                    <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
+                </div>
                 <p>See more</p>
              </div>
         </div>
+
+    </div>
+    <div class="page2">
 
     </div>
 
@@ -191,6 +219,7 @@
 
     </footer>
   </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="index.js"></script>
     
