--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
     <link rel="shortcut icon" href="./android-chrome-192x192.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -57,6 +58,7 @@
                 <i class="fa-solid fa-bars"></i>
                 All
             </div>
+            <div class="triangle"></div>
             <div class="panel-ops">
                 <p>Today's Deals</p>
                 <p>Customer Service</p> 
@@ -68,6 +70,41 @@
                 Shop deals in Electronics
             </div>
         </div>
+        <div id="full">
+            <h4>Digital Content & Devices</h4>
+            <h4>Shop by Department</h4>
+            <h4>Programs & Features</h4>
+            <h4>Help & Settings</h4>
+            <h4>Contact Us</h4>
+            <i class="ri-close-line"></i>
+        </div>
+        <div class="signin-opt">
+            <div class="signin-left">
+                <h1>Your Lists</h1>
+                <h3>Create a List</h3>
+                <h3>Find a List or Registry</h3>
+            </div>
+            <div class="signin-right">
+                <h1>Your Account</h1>
+                <h3>Account</h3>
+                <h3>Orders</h3>
+                <h3>Recommendations</h3>
+                <h3>Browsing History</h3>
+                <h3>Watchlist</h3>
+                <h3>Video Purchases & Rentals</h3>
+                <h3>Kindle Unlimited</h3>
+                <h3>Content & Devices</h3>
+                <h3>Subscribe & Save Items</h3>
+                <h3>Membership & Subscription</h3>
+                <h3>Music Library</h3>
+            </div>
+            <!-- <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1> -->
+        </div>
+        <div id="mainpage-overlay"></div>
 
     </header>
     <div class="hero-section">
@@ -221,6 +258,7 @@
   </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="index.js"></script>
     
 </body>
